# supercluster-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
benches/: supercluster_bench.rs
examples/: basic.rs  cartesian_coordinates.rs  clusters.rs  log.rs  serde.rs  tile.rs  without_cluster_metadata.rs
src/: builder.rs  error.rs  kdbush.rs  lib.rs  range.rs  supercluster.rs
tests/: supercluster_integration_test.rs  util.rs
tests/common/: cartesian.json  mod.rs
