[package]
name = "supercluster"
description = "Geospatial and non-geospatial point clustering."
version = "2.0.3"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Chargetrip <dev@chargetrip.com>"]
keywords = ["supercluster", "geospatial", "geo", "tile", "mvt"]
exclude = [".github/**"]
homepage = "https://chargetrip.com"
documentation = "https://docs.rs/supercluster"
repository = "https://github.com/chargetrip/supercluster-rs"

[dependencies]
geojson = "0.24.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
twox-hash = "2.1.0"

[lib]
name = "supercluster"
path = "src/lib.rs"
