[package]
name = "supercluster"
description = "Geospatial and non-geospatial point clustering."
version = "2.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Chargetrip <dev@chargetrip.com>"]
keywords = ["supercluster", "geospatial", "geo", "tile", "mvt"]
exclude = [".github/**", "examples/**", "tests/**", "benches/**"]
homepage = "https://chargetrip.com"
documentation = "https://docs.rs/supercluster"
repository = "https://github.com/chargetrip/supercluster-rs"

[dependencies]
geojson = "0.24.1"
log = { version = "0.4.25", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
twox-hash = "2.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
env_logger = "0.11.6"

[features]
logger = ["log"]

[[bench]]
name = "supercluster_bench"
harness = false

[lib]
name = "supercluster"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "feature_builder"
path = "examples/feature_builder.rs"

[[example]]
name = "clusters"
path = "examples/clusters.rs"

[[example]]
name = "tile"
path = "examples/tile.rs"

[[example]]
name = "cartesian_coordinates"
path = "examples/cartesian_coordinates.rs"

[[example]]
name = "logging"
path = "examples/logging.rs"
