[package]
name = "supercluster"
description = "Geospatial and non-geospatial point clustering."
version = "3.0.2"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Chargetrip <dev@chargetrip.com>"]
keywords = ["supercluster", "geospatial", "geo", "tile", "mvt"]
exclude = [".github/**", "examples/**", "tests/**", "benches/**"]
homepage = "https://chargetrip.com"
documentation = "https://docs.rs/supercluster"
repository = "https://github.com/chargetrip/supercluster-rs"

[dependencies]
geojson = "0.24.2"
log = { version = "0.4.26", optional = true }
serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
twox-hash = "2.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
env_logger = "0.11.6"
serde_json = "1.0.140"

[features]
cluster_metadata = ["serde_json"]

[[bench]]
name = "supercluster_bench"
harness = false
required-features = ["cluster_metadata", "log", "serde"]

[lib]
name = "supercluster"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["cluster_metadata"]

[[example]]
name = "feature_builder"
path = "examples/feature_builder.rs"

[[example]]
name = "clusters"
path = "examples/clusters.rs"
required-features = ["cluster_metadata"]

[[example]]
name = "tile"
path = "examples/tile.rs"

[[example]]
name = "cartesian_coordinates"
path = "examples/cartesian_coordinates.rs"
required-features = ["cluster_metadata"]

[[example]]
name = "log"
path = "examples/log.rs"
required-features = ["log"]

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["serde"]

[[example]]
name = "without_cluster_metadata"
path = "examples/without_cluster_metadata.rs"
required-features = ["serde"]
